scripts/nullness/annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8.txt
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:29: error: [initialization.field.uninitialized] the default constructor does not initialize field jsonResponse
	private JsonObject jsonResponse;
	                   ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:31: error: [initialization.field.uninitialized] the default constructor does not initialize field uriBld
	protected URIBuilder uriBld;
	                     ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:33: error: [initialization.field.uninitialized] the default constructor does not initialize field page
	protected Integer page;
	                  ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:90: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:107: error: [dereference.of.nullable] dereference of possibly-null reference uri
			url = uri.toURL();
			      ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:113: error: [dereference.of.nullable] dereference of possibly-null reference url
			response = url.openStream();
			           ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:127: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:130: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getMessage());
			                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/http/SongkickConnector.java:131: error: [assignment] incompatible types in assignment.
			jsonResponse =  null;
			                ^
  found   : null (NullType)
  required: @Initialized @NonNull JsonObject
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Venue.java:12: error: [assignment] incompatible types in assignment.
		this.latitude = latitude;
		                ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Venue.java:13: error: [assignment] incompatible types in assignment.
		this.longitude = longitude;
		                 ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/City.java:22: error: [assignment] incompatible types in assignment.
		this.latitude = latitude;
		                ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/City.java:23: error: [assignment] incompatible types in assignment.
		this.longitude = longitude;
		                 ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/Artist.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, id
	public Artist(){
	       ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/SimpleLocation.java:11: error: [assignment] incompatible types in assignment.
		this.lat = lat;
		           ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/entity/SimpleLocation.java:12: error: [assignment] incompatible types in assignment.
		this.lng = lng;
		           ^
  found   : @Initialized @Nullable double
  required: @Initialized @NonNull double
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:39: error: [return] incompatible types in return.
		return currentArtist;
		       ^
  type of expression: @Initialized @Nullable Artist
  method return type: @Initialized @NonNull Artist
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:93: error: [dereference.of.nullable] dereference of possibly-null reference getLocationId()
		if(getLocationId() == null || !getLocationId().equals(locationId)){
		                                            ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:140: error: [dereference.of.nullable] dereference of possibly-null reference currentArtist
		uri = queryByArtistId(currentArtist.getId());
		                      ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/EventSearch.java:183: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull Concert>
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:53: error: [argument] incompatible argument for parameter arg0 of DateTime constructor.
		event.setDateTime(new DateTime(datetime));
		                               ^
  found   : @Initialized @Nullable DateTime
  required: @Initialized @NonNull Object
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                              ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:91: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
			location = new SimpleLocation(lat, lng, locTmp.get("city").getAsString());
			                                   ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:110: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			venue = new Venue(	lat, 
			                  	^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:111: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
								lng, 
								^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [unboxing.of.nullable] unboxing a possibly-null reference lat
			city = new City(name,country,lat,lng);;
			                             ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/Extractor.java:147: error: [unboxing.of.nullable] unboxing a possibly-null reference lng
			city = new City(name,country,lat,lng);;
			                                 ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/ArtistSearch.java:136: error: [dereference.of.nullable] dereference of possibly-null reference currentArtist
			return list(currentArtist.getName());
			            ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:112: error: [dereference.of.nullable] dereference of possibly-null reference locations
			locations.add(fullLocation);
			^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:128: error: [argument] incompatible argument for parameter value of URIBuilder.setParameter.
						.setParameter("query", locationName)
						                       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/search/LocationSearch.java:133: error: [argument] incompatible argument for parameter arg0 of Logger.error.
			log.error(e.getCause());
			                    ^
  found   : @Initialized @Nullable Throwable
  required: @Initialized @NonNull Object
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:69: error: [iterating.over.nullable] iterating over possibly-null reference fullLocations
		for(FullLocation fullLoc : fullLocations)
		                           ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:76: error: [iterating.over.nullable] iterating over possibly-null reference fullLocations
			for(FullLocation fullLoc : fullLocations)
			                           ^
../annotator/url7507f7ef16_Neuro17_jsongkick_tgz-pJ8-jsongkick_AppJ8/src/jsongkick/App.java:116: error: [dereference.of.nullable] dereference of possibly-null reference artists
		 for(Artist artist: artists.subList(0, 10)){
		                    ^
34 errors
